[gd_scene load_steps=3 format=3 uid="uid://dlhwpdxs3m61f"]

[ext_resource type="Script" uid="uid://dw6eubru33rgd" path="res://scripts/st_healing_panel.gd" id="1"]
[ext_resource type="Theme" uid="uid://c8otso07yd5di" path="res://Image/UI/BloodButtonCompleted.tres" id="2"]

[node name="STHealingPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.0
offset_top = -91.0
offset_right = 117.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -77.5
offset_right = 121.5
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Bash_LethalHBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/Bash_LethalHBoxContainer"]
layout_mode = 2
text = "Bash/Lethal"

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/Bash_LethalHBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer/Bash_LethalHBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
text = "Damage"

[node name="AggravatedHBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/AggravatedHBoxContainer2"]
layout_mode = 2
text = "Aggravated"

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/AggravatedHBoxContainer2"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer/AggravatedHBoxContainer2"]
layout_mode = 2
theme = ExtResource("2")
text = "Damage"

[node name="HealAggravatedHBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/HealAggravatedHBoxContainer3"]
layout_mode = 2
text = "H.Aggravated"

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/HealAggravatedHBoxContainer3"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer/HealAggravatedHBoxContainer3"]
layout_mode = 2
theme = ExtResource("2")
text = "Heal"

[node name="Cancel" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2")
text = "Cancel"
